# graph-db-benchmark

./: .gitignore  README.md  benchmark_cozo.py  benchmark_duckdb.py  benchmark_ladybug.py  benchmark_utils.py  benchmark_vector.py  environment.md  generate_data.py  pyproject.toml  report.py  run_all.py
results/: RESULTS.md  cozo_large.json  cozo_medium.json  cozo_small.json  duckdb_large.json  duckdb_medium.json  duckdb_small.json  ladybug_large.json  ladybug_medium.json  ladybug_small.json  vec_cozo_large.json  vec_cozo_medium.json  vec_cozo_small.json  vec_duckdb_large.json  vec_duckdb_medium.json  vec_duckdb_small.json  vec_ladybug_large.json  vec_ladybug_medium.json  vec_ladybug_small.json
